--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "src": "/api/(.*)",
       "dest": "app/main.py"
+    },
+    {
+      "src": "/",
+      "dest": "app/main.py"
     }
   ]
 }
