--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,6 @@
-annotated-types==0.7.0
-anyio==4.11.0
-asn1crypto==1.5.1
-boto3==1.40.45
-botocore==1.40.45
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.3
-click==8.3.0
-cryptography==46.0.0
-dnspython==2.8.0
-email-validator==2.3.0
-fastapi==0.118.0
-fastapi-cli==0.0.13
-fastapi-cloud-cli==0.3.0
-filelock==3.19.1
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-Jinja2==3.1.6
-joblib
-jmespath==1.0.1
-lightgbm
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mdurl==0.1.2
-numpy==2.3.3
-packaging==25.0
-pandas==2.3.3
-platformdirs==4.4.0
-pycparser==2.23
-pydantic==2.11.10
-pydantic_core==2.33.2
-Pygments==2.19.2
-PyJWT==2.10.1
-pyOpenSSL==25.3.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.3
-requests==2.32.5
-rich==14.1.0
-rich-toolkit==0.15.1
-rignore==0.7.0
-s3transfer==0.14.0
+fastapi
+pandas
 scikit-learn
-sentry-sdk==2.39.0
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-snowflake-connector-python==3.17.4
-sortedcontainers==2.4.0
-starlette==0.48.0
-tomlkit==0.13.3
-typer==0.19.2
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-uvicorn==0.37.0
-uvloop==0.21.0
-watchfiles==1.1.0
-websockets==15.0.1
+lightgbm
+joblib
+uvicorn
