--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
             "src": "/(.*)",
             "dest": "api/main.py"
         }
-    ]
+    ],
+  "functions": {
+    "api/index.py": {
+      "includeFiles": "models/**"
+    }
+  }
 }
+
