--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,14 @@
 {
-    "builds": [
-        {
-            "src": "api/main.py",
-            "use": "@vercel/python",
-            "config": { "pip": "api/requirements.txt" }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "api/main.py"
-        }
-    ],
   "functions": {
-    "api/index.py": {
+    "api/main.py": {
+      "runtime": "python3.11",
       "includeFiles": "models/**"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/main.py"
+    }
+  ]
 }
-
