Update Vercel configuration to specify Python runtime and include model files from the correct path

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "functions": {
     "api/main.py": {
-      "runtime": "python3.11",
-      "includeFiles": "models/**"
+      "runtime": "@vercel/python@3.11",
+      "includeFiles": "api/models/**"
     }
   },
   "routes": [
