--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,17 @@
 {
-  "functions": {
-    "api/main.py": {
-      "runtime": "@vercel/python@3.11",
-      "includeFiles": "api/models/**"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/main.py",
+      "use": "@vercel/python",
+      "config": {
+        "pip": "api/requirements.txt",
+        "includeFiles": [
+          "api/models/**"
+        ]
+      }
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
