--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "build.sh",
-      "use": "@vercel/static-build",
+      "src": "api/main.py",
+      "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "100mb"
       }
